# obey

./: README.md  pyproject.toml
examples/: arguments_and_options.py  flag.py  hello_world.py  hello_world_with_options.py  list_as_argument.py  list_as_option.py  list_with_option.py  min.py  simplest.py  smarthome.py  two_tuples.py  vector_calculator.py
obey/: __init__.py  argument.py  collection.py  command.py  const.py  context.py  function.py  group.py  help.py  parameter.py  parser.py  utils.py
obey/types/: arg.py  option.py
tests/: test_argument.py  test_collection.py  test_command.py  test_function.py  test_obey.py  test_parameter.py  test_parser.py  test_utils.py
