[tool.poetry]
name = "obey"
version = "0.1.0"
description = "Python package for creating command line interfaces"
authors = ["Artem Legotin <hello@artemlegotin.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tabulate = "^0.8.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"